# sudattas

./: .gitattributes  .gitignore  check-errors.txt  package.json
backend/core_db_entities/: .env  Cargo.toml  regenerate_entities.ps1
backend/core_db_entities/src/: lib.rs  main.rs  run_db.sh
backend/core_db_entities/src/entity/: cart.rs  categories.rs  cities.rs  colors.rs  countries.rs  country_state_mapping.rs  coupon_redemptions.rs  coupon_scope.rs  coupons.rs  discounts.rs  event_logs.rs  fabrics.rs  generate.ps1  generate.sh  idempotency_keys.rs  inventory.rs  inventory_log.rs  mod.rs  newsletter_subscribers.rs  occasions.rs  order_details.rs  order_events.rs  order_status.rs  orders.rs  outbox_events.rs  payment_intents.rs  payment_methods.rs  prelude.rs  product_attribute_mapping.rs  product_attributes.rs  product_categories.rs  product_category_mapping.rs  product_color_mapping.rs  product_images.rs  product_ratings.rs  product_related.rs  product_size_mapping.rs  product_statuses.rs  product_variants.rs  products.rs  (+24 more)
backend/core_operations/: .env  Cargo.toml
backend/core_operations/src/: lib.rs  main.rs  money.rs  observability.rs  order_state_machine.rs  razorpay.rs  services.rs
backend/core_operations/src/auth/: mod.rs  session.rs
backend/core_operations/src/handlers/: db_errors.rs  idempotency.rs  mod.rs
backend/core_operations/src/handlers/cart/: create.rs  create_cart_item.rs  delete_cart_item.rs  enqueue_abandoned_cart.rs  get_cart_items.rs  mod.rs  update_cart_item.rs
backend/core_operations/src/handlers/categories/: create_category.rs  delete_category.rs  mod.rs  search_category.rs  update_category.rs
backend/core_operations/src/handlers/city/: create_city.rs  delete_city.rs  mod.rs  search_city.rs
backend/core_operations/src/handlers/colors/: create_color.rs  delete_color.rs  mod.rs  search_color.rs  update_color.rs
backend/core_operations/src/handlers/country/: create_country.rs  delete_country.rs  mod.rs  search_country.rs
backend/core_operations/src/handlers/country_state_mapping/: create_country_state_mapping.rs  delete_country_state_mapping.rs  mod.rs  search_country_state_mapping.rs  update_country_state_mapping.rs
backend/core_operations/src/handlers/coupons/: apply_coupon.rs  create_coupon.rs  eligibility.rs  mod.rs  update_coupon.rs  validate_coupon.rs
backend/core_operations/src/handlers/discounts/: create_discount.rs  delete_discount.rs  mod.rs  search_discount.rs  update_discount.rs
backend/core_operations/src/handlers/event_logs/: create_event_log.rs  delete_event_log.rs  mod.rs  search_event_log.rs  update_event_log.rs
backend/core_operations/src/handlers/fabrics/: create_fabric.rs  delete_fabric.rs  mod.rs  search_fabric.rs  update_fabric.rs
backend/core_operations/src/handlers/inventory/: create_inventory_item.rs  delete_inventory_item.rs  mod.rs  search_inventory_item.rs  update_inventory_item.rs
backend/core_operations/src/handlers/inventory_logs/: create_inventory_log.rs  delete_inventory_log.rs  mod.rs  search_inventory_log.rs  update_inventory_log.rs
backend/core_operations/src/handlers/newsletter_subscribers/: create_newsletter_subscriber.rs  delete_newsletter_subscriber.rs  mod.rs  search_newsletter_subscriber.rs  update_newsletter_subscriber.rs
backend/core_operations/src/handlers/occasions/: create_occasion.rs  delete_occasion.rs  mod.rs  search_occasion.rs  update_occasion.rs
backend/core_operations/src/handlers/order_details/: create_order_details.rs  mod.rs  search_order_details.rs  update_order_details.rs
backend/core_operations/src/handlers/order_events/: create_order_event.rs  get_order_events.rs  mod.rs  search_order_events.rs
backend/core_operations/src/notifications/: delivery.rs  mod.rs  templates.rs
backend/core_operations/src/procedures/: abandoned_cart.rs  mod.rs  outbox_worker.rs
backend/core_operations/src/services/: image_service.rs  mod.rs
backend/core_operations/tests/: handler_admin.rs  handler_cart.rs  handler_cart_orders.rs  handler_categories.rs  handler_colors.rs  handler_db_errors.rs  handler_event_logs.rs  handler_inventory.rs  handler_inventory_logs.rs  handler_newsletter_subscribers.rs  handler_order_details.rs  handler_order_events.rs  handler_orders.rs  handler_outbox.rs  handler_p2.rs  handler_payment_intents.rs  handler_product_attribute_mappings.rs  handler_product_attributes.rs  handler_product_images.rs  handler_product_variants.rs  handler_products.rs  handler_refunds_resolve.rs  handler_security.rs  handler_shipments_coupons.rs  handler_shipping_address.rs  handler_shipping_methods.rs  handler_sizes.rs  handler_test_template.rs  handler_transactions.rs  handler_user_activities.rs  handler_user_flows.rs  handler_user_roles.rs  handler_users.rs  handler_wishlist.rs  integration_abandoned_cart_outbox.rs  integration_cart.rs  integration_common.rs  integration_coupons.rs  integration_critical_paths.rs  integration_order_state.rs  (+13 more)
backend/graphql/: .env  Cargo.toml
backend/graphql/src/: graphql_handler.rs  graphql_limits.rs  health.rs  idempotency.rs  lib.rs  main.rs  metrics.rs  schema.rs  seo.rs  validation.rs
backend/graphql/src/graph_ql/: mod.rs  mutation_root.rs  query_root.rs  schema.rs
backend/graphql/src/query_handler/: mod.rs  mutation_root.rs  query_root.rs
backend/graphql/src/resolvers/: convert.rs  error.rs  grpc_client.rs  mod.rs  money.rs  utils.rs
backend/graphql/src/security/: csrf.rs  guest_session.rs  jwks_loader.rs  jwt_validator.rs  mod.rs  session_validator.rs
backend/graphql/src/webhooks/: mod.rs
backend/graphql/tests/: e2e_all_graphql_operations.rs  e2e_tests.rs  graphql_tests.rs  health_tests.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_baseline.rs  m20240101_000001_baseline_and_new_tables.rs  m20250101_000001_new_tables.rs  m20250102_000001_alter_payment_intents_status.rs  m20250103_000001_order_snapshot_and_coupon.rs  main.rs
backend/protos/: Cargo.toml  build.rs
backend/protos/proto/: messages.proto  services.proto
backend/protos/src/: lib.rs
(+371 files in other folders)
