[package]
name = "core_db_entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
sqlx-core = { version = "0.7" }
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
