[package]
name = "core_operations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tonic for gRPC
tonic = "0.10.2"
prost = "0.12.2"

# async runtime, Tonic depends on tokio
tokio = { version = "1", features = ["full"] }

# GraphQL dependencies
async-graphql = "6.0.11"

# Other common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.0"
dotenv = "0.15.0"
chrono = "0.4"

# Database and ORM dependencies (mock feature for handler unit tests)
sea-orm = { version = "0.12.6", features = ["mock"] }

# Log Dependencies
log = "0.4"

# Authentication - Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Session management - Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Image storage - S3/R2 SDK (behavior-version required by SDK)
aws-sdk-s3 = { version = "1.11", features = ["behavior-version-latest"] }
aws-config = "1.0"
aws-credential-types = "1.0"

# Error handling
thiserror = "1.0"

# UUID for session IDs
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.10.1"

# HTTP server for GraphQL
warp = "0.3"

base64 = "0.21.7"

# Path Dependencies
core_db_entities = {path = "../core_db_entities/"}
proto = {path = "../protos/"}
tracing = "0.1.44"

[dev-dependencies]
# Test dependencies
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.10.2"
