[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"  # Check for the latest version
async-graphql-warp = "6.0.11"  # Check for the latest version
warp = "0.3"  # HTTP server framework
tonic = "0.10.2"  # gRPC framework
prost = "0.12.3"  # Protocol Buffers framework
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10.1"
juniper = "0.15"
tide = "0.16.0"
async-std = { version = "1.0", features = ["attributes"] }

[build-dependencies]
tonic-build = "0.10.2"
