[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
maplit = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
juniper_warp = "0.7"
warp = "0.3"
tracing = { version = "0.1", features = ["log"] }
proto = {path = "../protos/"}

[build-dependencies]
tonic-build = "0.10.2"
