[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
juniper = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
maplit = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
juniper_warp = "0.7"
warp = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
proto = {path = "../protos/"}
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
bytes = "1.11.1"
redis = { version = "1.0.4", features = ["tokio-comp"] }

[build-dependencies]
tonic-build = "0.10.2"
